# drf-email-service

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
api/v1/: urls.py
app/account/: controller.py  models.py  repository.py  serializer.py  urls.py  views.py
app/account/migrations/: 0001_initial.py  0002_mailaccountmodel_is_deleted.py
app/account/tests/: __init__.py  base_test_case.py  test_controllers.py  test_data.py  test_models.py  test_views.py
app/bulk/: apps.py  controller.py  models.py  repository.py  serializer.py  urls.py  views.py
app/bulk/migrations/: 0001_initial.py  0002_remove_bulkmailmodel__group_ids.py  0003_alter_bulkmailmodel_text_body.py
app/bulk/tests/: base_test_case.py  test_controllers.py  test_data.py  test_models.py  test_views.py
app/delivery/: apps.py  models.py  repository.py  serializer.py
app/single/: apps.py  controller.py  models.py  repository.py  serializer.py  urls.py  views.py
app/template/: apps.py  controller.py  models.py  repository.py  serializer.py  urls.py  views.py
config/: celery.py
config/settings/: base.py  testing.py
core/: consumer.py  log.py
core/exceptions/: app_exception_handler.py  app_exceptions.py
core/interfaces/: __init__.py
core/models/: base_model.py
core/repository/: sql_base_repository.py
core/services/: mail_service.py
core/tasks/: __init__.py  send_mail.py
core/utils/: __init__.py  auth.py  constants.py  util.py
media/templates/: README  README.txt
tests/: __init__.py  base_test_case.py  mock_response.py
(+32 files in other folders)
